Change method return type and update calling methods/tests. Remove unused methods.