@@ -26,16 +26,26 @@ import io.qameta.allure.Description;
 import org.apache.http.HttpStatus;
 import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 // TODO: 01/07/2024 cn - all these tests need to be updated and fixed
 public class BulkCostingPageTests extends TestBaseUI {
+    private final String saltName = new GenerateStringUtil().saltString("name");
     private CidAppLoginPage loginPage;
     private BulkCostingPage bulkCostingPage;
     private String worksheetIdentity;
+    private BcmUtil bcmUtil;
     private UserCredentials userCredentials = UserUtil.getUser();
+
+    @BeforeEach
+    public void setup() {
+        RequestEntityUtil requestEntityUtil = TestHelper.initUser();
+        bcmUtil = new BcmUtil(requestEntityUtil);
+    }
 
     @AfterEach
     public void cleanUp() {
@@ -59,10 +69,11 @@ public class BulkCostingPageTests extends TestBaseUI {
 
         soft.assertThat(bulkCostingPage.isListOfWorksheetsPresent()).isTrue();
 
-        ResponseWrapper<WorkSheetResponse> worksheetResponse = createWorksheet(userCredentials);
-        bulkCostingPage.selectAndDeleteSpecificBulkAnalysis(worksheetResponse.getResponseEntity().getName());
+        WorkSheetResponse worksheetResponse = bcmUtil.createWorksheet(saltName);
+
+        bulkCostingPage.selectAndDeleteSpecificBulkAnalysis(worksheetResponse.getName());
         worksheetIdentity = null;
-        soft.assertThat(bulkCostingPage.isWorksheetNotPresent(worksheetResponse.getResponseEntity().getName())).isTrue();
+        soft.assertThat(bulkCostingPage.isWorksheetNotPresent(worksheetResponse.getName())).isTrue();
         soft.assertAll();
     }
 
@@ -77,10 +88,12 @@ public class BulkCostingPageTests extends TestBaseUI {
             .login(userCredentials)
             .clickBulkAnalysis();
 
-        ResponseWrapper<WorkSheetResponse> worksheetResponse = createWorksheet(userCredentials);
+        WorkSheetResponse worksheetResponse = bcmUtil.createWorksheet(saltName);
+
         String inputRowName1 = createInputRow(userCredentials, worksheetResponse, 5);
         String inputRowName2 = createInputRow(userCredentials, worksheetResponse, 6);
-        bulkCostingPage.enterSpecificBulkAnalysis(worksheetResponse.getResponseEntity().getName());
+        bulkCostingPage.enterSpecificBulkAnalysis(worksheetResponse.getName());
+
         soft.assertThat(bulkCostingPage.isInputRowDisplayed(inputRowName1)).isTrue();
         soft.assertThat(bulkCostingPage.isInputRowDisplayed(inputRowName2)).isTrue();
 
@@ -100,11 +113,13 @@ public class BulkCostingPageTests extends TestBaseUI {
             .login(userCredentials)
             .clickBulkAnalysis();
 
-        ResponseWrapper<WorkSheetResponse> worksheetResponse = createWorksheet(userCredentials);
+        WorkSheetResponse worksheetResponse = bcmUtil.createWorksheet(saltName);
+
         String inputRowName = createInputRow(userCredentials, worksheetResponse, 5);
-        bulkCostingPage.enterSpecificBulkAnalysis(worksheetResponse.getResponseEntity().getName());
+        bulkCostingPage.enterSpecificBulkAnalysis(worksheetResponse.getName());
+
         soft.assertThat(bulkCostingPage.getRemoveButtonState("Cannot perform a remove action"))
-            .contains(Arrays.asList("Cannot perform a remove action with no scenarios selected"));
+            .contains(List.of("Cannot perform a remove action with no scenarios selected"));
 
         bulkCostingPage.selectFirstPartInWorkSheet();
         soft.assertThat(bulkCostingPage.getRemoveButtonState("Remove"))
@@ -113,7 +128,7 @@ public class BulkCostingPageTests extends TestBaseUI {
             .contains(Arrays.asList("You are attempting to remove", "from the bulk analysis. This action cannot be undone."));
 
         bulkCostingPage.clickOnRemoveScenarioButtonOnConfirmationScreen();
-        soft.assertThat(bulkCostingPage.isScenarioPresentOnPage(inputRowName));
+        soft.assertThat(bulkCostingPage.isScenarioPresentOnPage(inputRowName)).isTrue();
         soft.assertAll();
     }
 
@@ -128,9 +143,9 @@ public class BulkCostingPageTests extends TestBaseUI {
             .login(userCredentials)
             .clickBulkAnalysis();
 
-        ResponseWrapper<WorkSheetResponse> worksheetResponse = createWorksheet(userCredentials);
+        WorkSheetResponse worksheetResponse = bcmUtil.createWorksheet(saltName);
         createInputRow(userCredentials, worksheetResponse, 5);
-        bulkCostingPage.enterSpecificBulkAnalysis(worksheetResponse.getResponseEntity().getName());
+        bulkCostingPage.enterSpecificBulkAnalysis(worksheetResponse.getName());
 
         soft.assertThat(bulkCostingPage.getSetInputButtonState("Cannot set inputs with no scenarios selected."))
             .isEqualTo("Cannot set inputs with no scenarios selected.");
@@ -165,17 +180,17 @@ public class BulkCostingPageTests extends TestBaseUI {
             .login(userCredentials)
             .clickBulkAnalysis();
 
-        ResponseWrapper<WorkSheetResponse> worksheetResponse = createWorksheet(userCredentials);
+        WorkSheetResponse worksheetResponse = bcmUtil.createWorksheet(saltName);
         createInputRow(userCredentials, worksheetResponse, 5);
         soft.assertThat(bulkCostingPage.getInfoButtonState("Cannot show worksheet info with no worksheet selected."))
             .isEqualTo("Cannot show worksheet info with no worksheet selected.");
 
-        bulkCostingPage.selectBulkAnalysis(worksheetResponse.getResponseEntity().getName());
+        bulkCostingPage.selectBulkAnalysis(worksheetResponse.getName());
         soft.assertThat(bulkCostingPage.getInfoButtonState("Worksheet Info")).isEqualTo("Worksheet Info");
 
         bulkCostingPage.clickOnTheInfoButton();
         soft.assertThat(bulkCostingPage.isBulkAnalysisInfoWindowIsDisplayed()).isTrue();
-        String worksheetName = worksheetResponse.getResponseEntity().getName().concat("_updated");
+        String worksheetName = worksheetResponse.getName().concat("_updated");
         bulkCostingPage.changeTheNaneOfBulkAnalysisName(worksheetName)
             .clickOnSaveButtonOnBulkAnalysisInfo();
         soft.assertThat(bulkCostingPage.isWorksheetPresent(worksheetName)).isTrue();
@@ -184,28 +199,21 @@ public class BulkCostingPageTests extends TestBaseUI {
             .clickOnSubmitOnSearchBulkAnalysis();
 
         soft.assertThat(bulkCostingPage.checkExpectedNumbersOfRows(1)).isTrue();
-        soft.assertThat(bulkCostingPage.getTextFromTheFirstRow()).contains(Arrays.asList(worksheetName));
+        soft.assertThat(bulkCostingPage.getTextFromTheFirstRow()).contains(List.of(worksheetName));
         soft.assertAll();
     }
 
-    private String createInputRow(UserCredentials userCredentials, ResponseWrapper<WorkSheetResponse> worksheetResponse, int itemNumber) {
+    private String createInputRow(UserCredentials userCredentials, WorkSheetResponse worksheetResponse, int itemNumber) {
         CssComponent cssComponent = new CssComponent();
         BcmUtil bcmUtil = new BcmUtil();
         ScenarioItem scenarioItem =
             cssComponent.postSearchRequest(userCredentials, "PART")
                 .getResponseEntity().getItems().get(itemNumber);
-        bcmUtil.createWorkSheetInputRowWithEmail(scenarioItem.getComponentIdentity(),
-            scenarioItem.getScenarioIdentity(), worksheetResponse.getResponseEntity().getIdentity(), userCredentials);
-        return scenarioItem.getComponentDisplayName();
-    }
 
-    private ResponseWrapper<WorkSheetResponse> createWorksheet(UserCredentials userCredentials) {
-        String name = new GenerateStringUtil().saltString("name");
-        BcmUtil bcmUtil = new BcmUtil();
-        ResponseWrapper<WorkSheetResponse> response =
-            bcmUtil.createWorksheetWithEmail(name, UserCredentials.init(userCredentials.getEmail(), null));
-        worksheetIdentity = response.getResponseEntity().getIdentity();
-        return response;
+        bcmUtil.createWorkSheetInputRowWithEmail(scenarioItem.getComponentIdentity(),
+            scenarioItem.getScenarioIdentity(), worksheetResponse.getIdentity(), userCredentials);
+
+        return scenarioItem.getComponentDisplayName();
     }
 
     private void setBulkCostingFlag(boolean bulkCostingValue) {
